@@ -1,6 +1,8 @@
 package pe.edu.upc.spring.mongodb.wallet.service;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import pe.edu.upc.spring.mongodb.wallet.model.ResultadosCartera;
 import pe.edu.upc.spring.mongodb.wallet.model.ResultadosConsulta;
@@ -10,6 +12,7 @@ import pe.edu.upc.spring.mongodb.wallet.repository.ResultadosConsultaRepository;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ResultadosCarteraService {
@@ -20,37 +23,40 @@ public class ResultadosCarteraService {
     @Autowired
     private ResultadosConsultaRepository resultadosConsultaRepository;
 
-
-    public ResultadosCarteraDTO consultarCartera(String userId) {
-        // Obtener la cartera actual del usuario
-        Optional<ResultadosCartera> carteraOpt = resultadosCarteraRepository.findByUserId(userId);
-        ResultadosCartera resultadosCartera;
-
-        // Si la cartera no existe, crear una nueva
-        if (carteraOpt.isEmpty()) {
-            resultadosCartera = new ResultadosCartera();
-            resultadosCartera.setUserId(userId);
-            resultadosCartera.setId(); // Asignar un nuevo ID a la cartera
+    private String getUserIdFromPrincipal() {
+        Object principal = SecurityContextHolder.getContext().getAuthentication().getPrincipal();
+        if (principal instanceof UserDetails) {
+            return ((UserDetails) principal).getUsername();
         } else {
-            resultadosCartera = carteraOpt.get();
+            return principal.toString();
+        }
+    }
+
+    public ResultadosCarteraDTO consultarCartera() {
+        String userId = getUserIdFromPrincipal();
+
+        // Verificar si la cartera existe y eliminarla si es necesario
+        Optional<ResultadosCartera> carteraOpt = resultadosCarteraRepository.findByUserId(userId);
+        if (carteraOpt.isPresent()) {
+            resultadosCarteraRepository.deleteByUserId(userId);
         }
 
-        // Obtener los resultados de consulta asociados a esta cartera
-        List<ResultadosConsulta> resultadosConsultaList = resultadosConsultaRepository
-                .findByUserId(userId); // Suponiendo que todos los resultados de consulta pertenecen al usuario
+        // Crear una nueva cartera
+        ResultadosCartera resultadosCartera = new ResultadosCartera();
+        resultadosCartera.setId();
+        resultadosCartera.setUserId(userId);
 
+        // Obtener los resultados de consulta más recientes
+        List<ResultadosConsulta> resultadosConsultaList = resultadosConsultaRepository.findByUserId(userId);
 
         double valorTotalRecibir = resultadosConsultaList.stream()
                 .mapToDouble(ResultadosConsulta::getValorRecibir)
                 .sum();
-
         resultadosCartera.setValorTotalRecibir(valorTotalRecibir);
-
 
         double totalTceaPonderada = resultadosConsultaList.stream()
                 .mapToDouble(consulta -> consulta.getTceaPorcentaje() * consulta.getValorRecibir())
                 .sum();
-
         if (valorTotalRecibir != 0) {
             double tceaPromedio = totalTceaPonderada / valorTotalRecibir;
             resultadosCartera.setTcea(tceaPromedio);
@@ -60,34 +66,18 @@ public class ResultadosCarteraService {
 
         List<String> resultadosConsultaIds = resultadosConsultaList.stream()
                 .map(ResultadosConsulta::getId)
-                .toList();
+                .collect(Collectors.toList());
         resultadosCartera.setResultadosConsultaIds(resultadosConsultaIds);
 
+        // Guardar la nueva cartera
         resultadosCarteraRepository.save(resultadosCartera);
 
-
-        return resultadosCartera.toResultadosCarteraDTO();
-    }
-    // Obtener resultados de cartera por userId
-    public ResultadosCartera obtenerResultadosCartera(String userId) {
-        return resultadosCarteraRepository.findByUserId(userId)
-                .orElseThrow(() -> new RuntimeException("Resultados de cartera no encontrados para el usuario: " + userId));
+        // Convertir a DTO
+        ResultadosCarteraDTO resultadosCarteraDTO = new ResultadosCarteraDTO();
+        resultadosCarteraDTO.setValorTotalRecibir(resultadosCartera.getValorTotalRecibir());
+        resultadosCarteraDTO.setTcea(resultadosCartera.getTcea());
+        return resultadosCarteraDTO;
     }
 
 
-    public ResultadosCarteraDTO obtenerResultadosCarteraDTO(String userId) {
-        ResultadosCartera resultadosCartera = obtenerResultadosCartera(userId);
-        ResultadosCarteraDTO dto = new ResultadosCarteraDTO();
-        dto.setValorTotalRecibir(resultadosCartera.getValorTotalRecibir());
-        dto.setTcea(resultadosCartera.getTcea());
-        return dto;
-    }
-
-
-    public ResultadosCartera actualizarResultadosCartera(String userId) {
-        // Lógica para actualizar los resultados de la cartera
-        ResultadosCartera resultadosCartera = obtenerResultadosCartera(userId);
-        // Realiza la actualización necesaria aquí
-        return resultadosCartera;
-    }
 }
